# cityhall

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  pr-title-check.yml
api/: Cargo.toml  build.rs
api/src/: auth.rs  cli.rs  crypto.rs  db.rs  error.rs  mailer.rs  main.rs  oidc.rs  proxy.rs  rbac.rs  seed.rs  server.rs  service.rs  state.rs  workspaces.rs
api/src/entities/: auth_settings.rs  mod.rs  oidc_settings.rs  password_reset_token.rs  role.rs  session.rs  smtp_settings.rs  user.rs  workspace.rs  workspace_settings.rs
api/src/handlers/: auth.rs  mod.rs  oidc.rs  roles.rs  settings.rs  signup.rs  users.rs  workspaces.rs
api/src/migration/: m0001_create_users.rs  m0002_create_sessions.rs  m0003_create_smtp_settings.rs  m0004_create_password_reset_tokens.rs  m0005_create_roles.rs  m0006_add_role_to_users.rs  m0007_create_oidc_settings.rs  m0008_add_oidc_subject_to_users.rs  m0009_create_auth_settings.rs  m0010_add_email_verified_to_users.rs  m0011_create_workspaces.rs  mod.rs
api/src/orchestrator/: docker.rs  kubernetes.rs  mod.rs  process.rs
deploy/: .env.example  README.md  docker-compose.prod.yml  docker-compose.workspaces.yml
deploy/aoe-image/: Dockerfile
deploy/helm/cityhall/: .helmignore  Chart.yaml  values.yaml
deploy/helm/cityhall/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  postgres.yaml  secret.yaml  service.yaml  workspaces-networkpolicy.yaml  workspaces-rbac.yaml
deploy/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secret.yaml  service.yaml  workspaces-networkpolicy.yaml  workspaces-rbac.yaml
deploy/reverse-proxy/: Caddyfile  docker-compose.traefik.yml  nginx.conf
deploy/systemd/: cityhall.env.example  cityhall.service
docs/: api.md  cli.md  configuration.md  deployment.md  development.md  index.md  quick-start.md  workspaces.md
web/: .gitignore  .oxfmtrc.json  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ChangePasswordPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  OidcSettings.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  RolesPage.tsx  SettingsPage.tsx  SignupSettings.tsx  TopBar.tsx  UserDialog.tsx  UsersPage.tsx  VerifyEmailPage.tsx  WorkspaceSettings.tsx  WorkspacesPage.tsx  ui.tsx
web/src/lib/: api.ts  versions.ts
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
website/public/: CNAME  main.js
website/scripts/: sync-docs.mjs
website/src/components/: DocsSidebar.astro  Footer.astro  GuideNav.astro  Nav.astro
website/src/data/: docsNav.ts
website/src/layouts/: Base.astro  Docs.astro
