[package]
name = "cityhall-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CityHall backend API"

[[bin]]
name = "cityhall"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8"
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.2"
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1.20", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
